other/b-d/block-stale-images/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
    - name: redis
      image: docker.io/redis:latest
