other/b-d/block-stale-images/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-stale-images
status:
  ready: true
