other/b-d/block-stale-images/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: block-stale-images
  rules:
  - name: block-stale-images
    values:
      imageData.configData.created: "2020-05-01T03:15:12-07:00"
